--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h3, ul {
 }
 
 h3 {
-    margin-right: 30%;
+    margin-right: 20%;
 }
 
 ul {
@@ -64,5 +64,7 @@ ul {
 
 li {
     display: inline;
-    padding: 0 5vh;
+    font-size: 36px;
+    white-space: nowrap;
+    margin-right: 24px;
 }
