--- a/style.css
+++ b/style.css
@@ -7,7 +7,16 @@
 
 img {
     width: 180px;
-    padding: 10px;
+    padding: 25px;
+    transition: all 0.5s ease-out;
+    filter: grayscale(60%);
+    border-radius: 20%;
+    display: inline;
+}
+
+img:hover {
+    transform: scale(1.2);
+    filter: grayscale(10%)
 }
 
 /*colors box temp*/
@@ -29,6 +38,10 @@ body {
 }
 /*-------*/
 
+article {
+    display: inline;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -39,10 +52,6 @@ body {
 #container {
     width: 680px;
     max-width: calc(100vw - 10px);
-}
-
-footer {
-    text-align: center;
 }
 
 /* footer */
