--- a/style.css
+++ b/style.css
@@ -37,21 +37,29 @@ body {
     background-color: rgba(252, 0, 0, 0.3);
 }
 /*-------*/
-
-article {
-    display: inline;
-}
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: url('background.jpg') no-repeat center;
+    background-size: cover;
 }
 
 #container {
     width: 680px;
     max-width: calc(100vw - 10px);
+}
+header {
+    display: flex;
+}
+
+figure {
+    display: inline;
+}
+
+article {
+    display: inline;
 }
 
 /* footer */
